@@ -1,3 +1,9 @@
+2006-01-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: improved scanning for root mountpoint (/)
+	* src/Dialog_Partition_Info.cc: use Utils::format_size() instead of
+	  displaying every value in MiB's. Also some cleanups and changes.
+
 2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Utils.cc: use realpath() to get absolute path to 'real'
